# domcorder

./: .gitignore  .mcp.json  Cargo.toml  DESIGN.md  GETTING_STARTED.md  README.md  build.ts  bun.lockb  package.json  proto-streaming-refactor.md  tasks.md
.sample_data/proto/: file-basic.dcrr
browser-core/: README.md  bun.build.ts  jest.config.js  package.json  playwright.config.ts  rollup.dts.config.js  tsconfig.json
browser-core/docs/: Asset-Management.md  DOM-ChangeDetection-and-Mutation-Plan.md  DomChangeDetector-Spec.md  DomMutatorSpec.md  MutationObservers.md  PlaybackQueue-Design.md  StyleSheetWatcher-Spec.md
browser-core/src/: index.ts  player.ts  recorder.ts
browser-core/src/common/: AssetConstants.ts  Deferred.ts  DomOperation.ts  NodeIdBiMap.ts  SimpleBufferReader.ts  StringMutationOperation.ts  StyleSheetIdUtils.ts  compare-dom.ts  hash.ts  index.ts  protocol.ts
browser-core/src/player/: AdoptedStyleSheetMutator.ts  AssetManager.ts  DomMaterializer.ts  DomMutator.ts  ElementScrollHandler.ts  FrameChunkReader.ts  MouseSimulator.ts  PagePlayer.ts  PagePlayerComponent.ts  PlaybackQueue.ts  ScrollableElementRegistry.ts  ScrollableElementTracker.ts  SelectionOverlaySimulator.ts  SelectionRangeGenerator.ts  SelectionSimulator.ts  StyleSheetMutator.ts  TypingSimulator.ts  UrlResolver.ts  index.ts
browser-core/src/recorder/: CanvasTracker.ts  DomChangeDetector.ts  EventRateLimiter.ts  FormFieldTracker.ts  FrameChunkWriter.ts  PageRecorder.ts  PageRecordingClient.ts  ShadowRootTracker.ts  StringChangeDetector.ts  StyleSheetWatcher.ts  UserInteractionTracker.ts  index.ts
browser-core/test/: StringChangeDetector.test.ts  setup.ts
browser-core/test-pages/: server.js
browser-core/test-pages/keyboard/: index.html
browser-core/test-pages/recorder-player/: index.html  index.js  target.html
browser-core/test-pages/stylesheets/: index.html
browser-core/test/player/: FrameChunkReaderWriter.test.ts  PlaybackQueue.test.ts
browser-core/test/recorder/: DomChangeDetector.test.ts  DomChangeDetector.ts  DomMutator.test.ts  DomSync.integration.test.ts  DomSyncTestUtils.ts  StringChangeDetector.test.ts  StyleSheetWatcher.test.ts  (+4 more)
demo-app/: package.json
demo-app/src/: format.ts  inject-standalone.js  server.ts
docs/: asset-caching-design.md  file_format.md  frame-chunking.md  proto.md
docs/asset-caching/: design.md  future-considerations.md  implementation.md  requirements.md  todos.md
injection/: README.md  package.json  tsconfig.json
injection/src/: index.ts
mmacfadden/: README.md  bun.lockb  format.ts  jest.config.js  package.json
mmacfadden/src/: DomChangeDetector.ts  DomInlineTransformer.ts  DomMutator.ts  InlineSnapshotStreamer.ts  NodeIdBiMap.ts  PagePlayer.ts  PageRecorder.ts  StyleSheetWatcher.ts  applyDomDiff.ts  domDiff.ts  example-usage.ts  incrementalDomDiff.ts  index.ts  mutationObserverDiff.ts  operation.ts  protocol.ts  serialization.ts
mmacfadden/test/: StringChangeDetector.test.ts  domDiff.test.ts
mmacfadden/test-page/: index.html  server.js
mmacfadden/test-pages/: server.js
player/: package.json
player/public/: inject.js
player/src/: App.tsx
proto-rs/: Cargo.toml
proto-rs/src/: frame.rs  lib.rs  reader.rs  vdom.rs  writer.rs
proto-rs/tests/: common.rs  frames_test.rs
proto-ts/: README.md  package.json  tsconfig.json
proto-ts/src/: dom-converter.ts  domnode.ts  frames.ts  index.ts  protocol.ts  reader.ts  vdom.ts  writer.ts
proto-ts/test/: TASKS.md  async-frames.test.ts  file-format.test.ts  frames.test.ts  reader-basic.test.ts  reader-errors.test.ts  reader-roundtrip.test.ts  sample-frames.ts  stream-observer.test.ts  stream-observer.ts  util.js  writer-consolidated.test.ts
recorder-player/: package-lock.json  package.json
recorder-player/archived/: applyDomDiff.ts  domDiff.ts
recorder-player/src/: PagePlayer.ts  PageRecorder.ts  index.ts  protocol.ts
recorder-player/test-pages/: server.js
server/: Cargo.toml
server/src/: lib.rs  main.rs  recording_handler.rs  server.rs  server_test.rs  storage.rs
server/src/asset_cache/: fetcher.rs  hash.rs  local.rs  manifest.rs  mod.rs  playback.rs  sqlite.rs
src/: index.ts
src/capture/: bookmarklet.ts
src/components/: BookmarkletButton.tsx
test/: format.test.ts  util.js
test/proto/: debug-complex-keyframe.test.ts  domnode-debug.test.ts  frames.test.ts  keyframe-debug.test.ts  mixed-frames.test.ts  simple-keyframe.test.ts
(+64 files in other folders)
