[workspace]
resolver = "2"
members = ["proto-rs"]

# Shared dependencies for all workspace members
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Workspace-wide settings
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Domcorder Team"]
repository = "https://github.com/your-org/domcorder"
