[package]
name = "domcorder-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["io-util"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }