[package]
name = "domcorder-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"

[[bin]]
name = "dcrr-inspect"
path = "src/bin/dcrr_inspect.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }