[package]
name = "domcorder-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
hyper = { version = "1.0", features = ["http2"] }
hyper-util = { version = "0.1", features = ["http2", "server-auto"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
# Asset caching dependencies
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
url = "2.5"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rand = "0.8"

# Local dependencies
domcorder-proto = { path = "../proto-rs" }

[dev-dependencies]
tempfile = "3.8"
